# TrafficSurveillance

./: .gitignore  CMakeLists.txt  README.md  backgroundsubtractor.cpp  backgroundsubtractor.h  bgmog2detector.cpp  bgmog2detector.h  bgmogdetector.cpp  bgmogdetector.h  camshifttracker.cpp  camshifttracker.h  car.cpp  car.h  carcs.cpp  carcs.h  carkf.cpp  carkf.h  flowdrawer.cpp  flowdrawer.h  imageline.cpp  imageline.h  kalmanfiltertracker.cpp  kalmanfiltertracker.h  main.cpp  motionsegmentationdetectorhs.cpp  motionsegmentationdetectorhs.h  simpletracker.cpp  simpletracker.h  trafficdebug.cpp  trafficdebug.h  trafficimagedataset.cpp  trafficimagedataset.h  trafficsurveillancecommon.cpp  trafficsurveillancecommon.h  trafficvideo.cpp  trafficvideo.h  virtualdetection.h  virtualtrack.h
data/countingCars/: ReportAnalysis.m
package_bgs/: IBGS.h
package_bgs/MultiLayer/: MultiLayer.cpp  MultiLayer.h
package_bgs/PBAS/: PBAS.cpp  PixelBasedAdaptiveSegmenter.cpp  PixelBasedAdaptiveSegmenter.h
package_tracking/cvblob/: cvblob.h
test_code/: camshift_test.py
